--- a/notes-project/package.json
+++ b/notes-project/package.json
@@ -11,8 +11,10 @@
     "start": "nodemon backend/src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
