--- a/notes-project/package.json
+++ b/notes-project/package.json
@@ -11,7 +11,9 @@
     "start": "nodemon backend/src/index.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
