--- a/notes-project/package.json
+++ b/notes-project/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
