--- a/notes-project/package.json
+++ b/notes-project/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
