--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Configurar Node.js
       uses: actions/setup-node@v2
       with:
-          node-version: '20.x'
+          node-version: '16.X'
           
     - name: Mudar para a pasta notes-project
       run: cd notes-project
