--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Configurar Node.js
       uses: actions/setup-node@v2
       with:
-          node-version: '16.X'
+          node-version: '20.x'
       
     - name: navigate to notes-project
       run: cd notes_project
