--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Configurar Node.js
       uses: actions/setup-node@v2
       with:
-          node-version: '20.x'
+          node-version: '20'
           
     - name: List current directory
       run: ls -l
