--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,16 @@ jobs:
     - name: Configurar Node.js
       uses: actions/setup-node@v2
       with:
-          node-version: '20'
-          
-    - name: List current directory
-      run: ls -l
-    
-    - name: Enter in notes_project
+          node-version: '20.x'
+      
+    - name: Navigate to notes_project directory
       run: cd notes_project
     
-    - name: Limpar o cache do npm
-      run: npm cache clean --force  
+    - name: Set permissions for notes_project directory
+      run: chmod -R +w .
+      
+    - name: List current directory
+      run: ls -l
       
     - name: Instalar Dependências
       run: npm install
