--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,9 @@ jobs:
       with:
           node-version: '20.x'
       
-    - name: Navigate to notes_project directory
-      run: cd notes_project
-    
-    - name: Set permissions for notes_project directory
-      run: chmod -R +w .
-      
-    - name: List current directory
-      run: ls -l
-      
-    - name: Instalar Dependências
+    - name: Instalando dependencias
       run: npm install
+      working-directory: notes_project
   
   test:
     runs-on: ubuntu-latest
