--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,18 +39,12 @@ jobs:
 
     - name: Instalar Dependencias
       run: npm install
+      working-directory: notes_project  
 
-    - name: Executar Testes
-      run: npm test
+    - name: Build Docker image
+      run: docker build -t myapp .
+      working-directory: notes_project  # Define o diretório onde estão o Dockerfile e o Docker Compose
 
-    - name: Instalar http-server
-      run: npm install -g http-server
-
-    - name: Iniciar http-server
-      run: http-server -p 3000 -d false &
-
-    - name: Esperar pelo http-server
-      run: sleep 5
-
-    - name: Executar Testes Cypress
-      run: npx cypress run --config baseUrl=http://localhost:3000
+    - name: Run Docker Compose
+      run: docker-compose up -d
+      working-directory: notes_project  # Define o diretório onde estão o Dockerfile e o Docker Compose
