--- a/notes_project/Dockerfile
+++ b/notes_project/Dockerfile
@@ -3,7 +3,7 @@
 FROM node:20-alpine
 
 # Define o diretório de trabalho dentro do container
-WORKDIR /usr/src/app
+WORKDIR /backend/src
 
 # Copia os arquivos de dependências
 COPY package*.json ./
