--- a/notes_project/package.json
+++ b/notes_project/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "nodemon backend/src/index.js"
+    "start": "nodemon backend/src/index.js",
+    "test": "mocha test/test.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "sonner": "^1.4.41",
+    "supertest": "^7.0.0",
     "use-history": "^1.4.1"
   },
   "devDependencies": {
@@ -31,9 +33,11 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "mocha": "^10.4.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
